force-app/main/default/objects/cgcloud__Trip_List__c/cgcloud__Trip_List__c.object-meta.xml
<CustomObject>
    <description>Trip List is used to plan visits based on a predefined sequence of customers.</description>
    <label>Trip List</label>
    <nameField>
        <label>Trip List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>