force-app/main/default/objects/cgcloud__Trip_List__c/fields/cgcloud__Responsible__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Responsible of the Trip List.</description>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trip_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>