force-app/main/default/objects/cgcloud__Trip_List__c/fields/cgcloud__Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Type__c</fullName>
    <description>Type of the Trip List</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>