force-app/main/default/objects/cgcloud__Trip_List__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <description>Trip list is valid from this date.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>