force-app/main/default/objects/cgcloud__Trip_List__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <description>Trip list is valid till this date.</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>