force-app/main/default/objects/cgcloud__Trip_List__c/validationRules/cgcloud__Check_If_Type_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Type_Is_Changed</fullName>
    <active>true</active>
    <description>The Type can&apos;t be edited after Trip List creation.</description>
    <errorConditionFormula>AND(ISCHANGED( cgcloud__Type__c ) , NOT(ISBLANK(PRIORVALUE( cgcloud__Type__c ))))</errorConditionFormula>
    <errorMessage>The Type can&apos;t be edited after Trip List creation.</errorMessage>
</ValidationRule>